# echallenge

./: .gitignore  README.md
api/: Dockerfile  Dockerfile-mongo  desarrollo.txt  pyproject.toml  readme.txt  requirements.txt  requirements_dev.txt  setup.cfg
api/features/: environment.py  users.feature
api/features/steps/: __init__.py  users.py
api/src/api/: __main__.py  app.py
api/src/api/auth/: deps.py  entities.py  models.py  routes.py
api/src/api/db/: __init__.py  deps.py  entities.py  models.py  settings.py
api/src/api/jwt/: deps.py  exceptions.py  models.py  routes.py  settings.py
api/src/api/routes/: login.py  users.py
api/src/api/vehicles/: deps.py  entities.py  exceptions.py  models.py  routes.py  settings.py
api/src/indexer/api/: app.py  workspace.code-workspace
api/src/indexer/api/auth/: db.py  deps.py  entities.py  models.py  routes.py  schemas.py  settings.py
api/src/indexer/api/auth/application/: __init__.py  add_admin.py  create_user.py  get_users.py  login.py
api/src/indexer/api/auth/domain/: __init__.py  auth_repository.py  exceptions.py  models.py
api/src/indexer/api/auth/infraestructure/fastapi/: deps.py  routes.py  schemas.py  settings.py
api/src/indexer/api/auth/infraestructure/repo/: auth_repository.py  exceptions.py
api/src/indexer/api/auth/repository/: __init__.py  auth.py  entities.py  exceptions.py
api/src/indexer/api/auth/use_cases/: __init__.py  add_admin.py  create_user.py  get_users.py  models.py
api/src/indexer/api/indexer/: deps.py  models.py  routes.py  schemas.py
api/src/indexer/api/jwt/: routes.py  schemas.py
api/src/indexer/api/vehicles/: deps.py  models.py  routes.py
api/tests/: test_api_users.py  test_db_users.py  test_jwt.py
docker/: docker-compose.api.yml  docker-compose.indexer-mongo.yml  docker-compose.indexer-postgres.yml  docker-compose.indexer.yml  docker-compose.kafdrop.yml  docker-compose.kafka.yml  docker-compose.producer.yml
docker_dev/: docker-compose.api.yml
docker_dev/scripts/: install_req.sh  start.sh
indexer/: Dockerfile  Dockerfile-mongo  desarrollo.txt  notes.txt  pyproject.toml  readme.txt  requirements.txt  requirements_dev.txt  setup.cfg
indexer/src/indexer/: exceptions.py  main.py  models.py  settings.py
indexer/src/indexer/indexer/: __main__.py  main.py  models.py
indexer/src/indexer/indexer/stream/: listener.py  processor.py
indexer/src/indexer/indexer/stream/processors/: __init__.py  detect_alert.py  persist_to_db.py  publish_alert.py
indexer/tests/: test_indexer.py
libs/db/: pyproject.toml  readme.txt  setup.cfg
libs/db/src/indexer/vehicles/: entities.py  models.py
libs/vehicles/: setup.cfg
libs/vehicles/src/indexer/vehicles/: entities.py  models.py
libs/vehicles_mongo/: desarrollo.txt  readme.txt  requirements_dev.txt  setup.cfg
libs/vehicles_mongo/src/indexer/mvehicles/: db.py  models.py
libs/vehicles_mongo/src/indexer/vehicles/: db.py  entities.py  models.py
libs/vehicles_mongo/tests/: test_detections.py
libs/vehicles_postgres/: desarrollo.txt  pyproject.toml  readme.txt  requirements_dev.txt  setup.cfg
libs/vehicles_postgres/src/indexer/pgvehicles/: db.py  entities.py  models.py
libs/vehicles_postgres/tests/: test_detections.py
producer/: main.py
