[metadata]
name = api
version = 0.0.1
description = challenge de epic - api
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.9'


[options]
packages = api
install_requires=
    fastapi
    sse-starlette
    pydantic
    email-validator
    uvicorn
    asyncio
    aiokafka
    python-jose[cryptography]
    passlib
    python-multipart
    SQLAlchemy

python_requires = >=3.9
package_dir = 
    =src
    
zip_safe = no

[options.extras_require]
testing = 
    pytest >= 7.1
    pytest-cov >= 3.0
    mypy >= 0.950
    flake8 >= 4.0
    tox >= 3.25

[options.package_data]
api = py.typed

[flake8]
max-line-length = 160