[metadata]
name = indexer_indexer
version = 0.0.2
description = challenge de epic - indexer de alertas y detecciones
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.9'


[options]
# packages = indexer.indexer
packages = find_namespace:
package_dir =
    = src

install_requires=
    kafka-python==2.0.2
    pydantic
    indexer-vehicles
    indexer-vehicles-postgres
    indexer_vehicles_mongo

python_requires = >=3.9
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest >= 7.1
    pytest-cov >= 3.0
    mypy >= 0.950
    flake8 >= 4.0
    tox >= 3.25

[options.package_data]
indexer = py.typed

[flake8]
max-line-length = 160