[metadata]
name = indexer_vehicles
version = 0.0.1
description = challenge de epic - persistencia de los datos de vehiculos
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.9'


[options]
packages = indexer.vehicles
install_requires=
    pydantic
python_requires = >=3.9
package_dir = 
    =src
zip_safe = no
