[metadata]
name = indexer_vehicles_mongo
version = 0.0.1
description = challenge de epic - persistencia de los datos de vehiculos en mongo
author = Pablo Daniel Rey
author_email = pablodanielrey@gmail.com
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.9'


[options]
packages = indexer.mvehicles
install_requires=
    indexer-vehicles
    pydantic
    pymongo

python_requires = >=3.9
package_dir = 
    =src
    
zip_safe = no

[options.extras_require]
testing = 
    pytest >= 7.1
    pytest-cov >= 3.0
    mypy >= 0.950
    flake8 >= 4.0

[options.package_data]
api = py.typed

[flake8]
max-line-length = 160